# psprompt

./: Cargo.toml  README.md  make_readme.sh
src/: colors.rs  config_template.toml  lib.rs  main.rs  styles.rs
