[package]
name = "psprompt"
version = "0.1.1"
edition = "2021"
description = "Create colorful prompts for the terminal"
repository = "https://github.com/ArielHorwitz/psprompt"
keywords = [
    "terminal",
    "color",
    "bash",
    "prompt",
]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.9"
